updated openapi and web tests
