# openapi.json
@@ -1096,70 +1096,6 @@
         ]
       }
     },
-    "/users": {
-      "get": {
-        "tags": ["Users"],
-        "summary": "Gets a list of all users",
-        "description": "Get a list of all users in the system",
-        "responses": {
-          "200": {
-            "description": "The list of users known to the system",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "id": {
-                        "type": "number",
-                        "description": "User's unique ID"
-                      },
-                      "email": {
-                        "type": "string",
-                        "format": "email",
-                        "description": "User's email address"
-                      },
-                      "name": {
-                        "type": "string",
-                        "description": "User's name"
-                      },
-                      "phone": {
-                        "type": "string",
-                        "description": "User's phone number; up to 10 digits"
-                      },
-                      "position": {
-                        "type": "string",
-                        "description": "User's position in the state’s Medicaid program"
-                      },
-                      "state": {
-                        "type": "string",
-                        "description": "Two-letter ID of the state this user is associated with, if any"
-                      },
-                      "role": {
-                        "type": "string",
-                        "description": "The user's role name, if any. Can be null."
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "The user is not logged in"
-          },
-          "403": {
-            "description": "The user does not have permission to perform this activity"
-          }
-        },
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ]
-      }
-    },
     "/users/{id}": {
       "get": {
         "tags": ["Users"],
